# mantle

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  justfile  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  publish.yml
.mantle/: .compile-manifest.json  config.md  cost-policy.md  decisions.md  product-design.md  state.md  system-design.md
.mantle/audits/: 2026-04-22-token-audit.md  2026-04-22-vault-audit.md
.mantle/brainstorms/: 2026-04-05-fastmcp-patterns-for-mantle.md  2026-04-05-knowledge-engine-query-and-distill.md  2026-04-06-scout-command-external-repo-analysis.md  2026-04-09-cli-refactor-help-grouping.md  2026-04-11-ab-model-effort-routing.md  2026-04-11-collapse-code-review-into-simplify.md  2026-04-12-jira-integration-via-hook-seam.md  2026-04-16-awesome-claude-skills-post-triage.md  2026-04-22-gsd-scout-backlog-reshape.md
.mantle/bugs/: 2026-04-16-mantle-where-resolves-to-workt.md  2026-04-24-build-telemetry-silently-recor.md
.mantle/builds/: build-56-20260418-0818.md  build-61-20260417-2045.md  build-62-20260417-2157.md  build-63-20260417-2234.md  build-65-20260418-1313.md  build-74-20260422-1818.md  build-76-20260419-1813.md  build-77-20260420-1515.md  build-78-20260420-1034.md  build-80-20260420-1851.md  build-81-20260421-1439.md  build-82-20260421-1513.md  build-83-20260421-1551.md  build-84-20260421-1921.md  build-88-20260422-1934.md  build-89-20260424-2101.md  build-90-20260424-1257.md  build-91-20260424-1117.md  build-92-20260424-1927.md
.mantle/decisions/: 2026-04-24-gsd-differentiator-correction.md
.mantle/inbox/: 2026-04-06-global-mantle-storage-per-proj.md  2026-04-06-query-mantle-for-recurring-iss.md  2026-04-07-archive-completed-issues-and-s.md  2026-04-07-fix-next-step-recommendations.md  2026-04-07-investigate-reports-folder-unc.md  2026-04-07-report-to-github-command-file.md  2026-04-09-ab-test-modeleffort-strategy-a.md  2026-04-09-archiveissue-shaped-doc-glob-m.md  2026-04-09-bug-global-storage-mode-still.md  2026-04-09-bug-mantle-save-learning-aggre.md  2026-04-09-cross-repomulti-repo-project-c.md  2026-04-09-git-branch-and-worktree-integr.md  2026-04-09-inject-skills-as-jinja-templat.md  2026-04-09-jira-integration-for-issues-an.md  2026-04-09-lightweight-bug-fix-pipeline-s.md  2026-04-09-mantleupgrade-command-to-updat.md  2026-04-09-notion-integration-for-publish.md  2026-04-09-prompt-engineering-skill-exper.md  2026-04-09-reviewmd-order-bug-save-review.md  2026-04-09-save-learning-auto-archive-bre.md  2026-04-09-update-skills-auto-detection-i.md  2026-04-10-rethink-tag-naming-conventions.md  2026-04-12-simplification-skip-threshold.md  2026-04-12-skill-auto-matcher-description.md  (+23 more)
.mantle/issues/: issue-01.md  (+92 more)
examples/: test_wheel_install.sh
reports/: code-review-story2-save-scout-cli-2026-04-07.md
scripts/: test_init.sh  test_wheel_install.sh
tests/: conftest.py  test_global_mode_workflow.py  test_hook_examples.py  test_import_contracts.py  test_install.py  test_package.py  test_staleness_regressions.py  test_workflows.py
vault-templates/: bug.md  decision.md  idea.md  issue.md  product-design.md  research.md  session-log.md  skill.md  story.md  system-design.md
(+946 files in other folders)
