[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mantle-ai"
version = "0.22.0"
description = "AI workflow engine with persistent context."
readme = "README.md"
authors = [
    { name = "chonalchendo", email = "110059232+chonalchendo@users.noreply.github.com" },
]
requires-python = ">=3.14"
dependencies = [
    "cyclopts>=3.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "tiktoken>=0.8",
]

[project.scripts]
mantle = "mantle.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/mantle"]

[tool.hatch.build.targets.wheel.force-include]
"claude" = "mantle/claude"
"vault-templates" = "mantle/vault-templates"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyyaml>=6.0",
    "inline-snapshot>=0.19",
    "dirty-equals>=0.8",
]
lint = ["ruff>=0.11", "import-linter>=2.0"]
type = ["ty>=0.0"]
hooks = ["prek>=0.3"]
check = [
    { include-group = "dev" },
    { include-group = "lint" },
    { include-group = "type" },
]

[tool.ruff]
line-length = 80
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "RUF", "B", "SIM", "TCH"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers --tb=short"

[tool.importlinter]
root_package = "mantle"
include_external_packages = false
exclude_type_checking_imports = true

[[tool.importlinter.contracts]]
name = "core never imports from cli or api"
type = "forbidden"
source_modules = ["mantle.core"]
forbidden_modules = ["mantle.cli", "mantle.api"]
